@@ -1,3 +1,7 @@
+2009-04-01  Bastien Nocera  <hadess@hadess.net>
+
+	* lib/asprintf.c: Remove unused file (Closes: #577538)
+
 2009-03-31  Bastien Nocera  <hadess@hadess.net>
 
 	* src/plugins/thumbnail/totem-thumbnail.c (set_icon_to_default):
